--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ license = "ISC"
 edition = "2018"
 
 [dependencies]
+bare-metal = "0.2.4"
+riscv = "0.5.0"
+riscv-rt = { version = "0.5.0", optional = true }
+vcell = "0.1.0"
+
+[features]
+rt = ["riscv-rt"]
