--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
 categories = ["embedded", "hardware-support", "no-std"]
 description = "Peripheral access API for K210 SoC"
-keywords = ["no-std", "riscv", "register", "peripheral"]
+keywords = ["riscv", "k210", "register", "peripheral"]
 license = "ISC"
 edition = "2018"
 
